# test-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md
public/: tailwind.css
src/: api.rs  counter.rs  main.rs
